--- a/style.css
+++ b/style.css
@@ -10,23 +10,17 @@ body {
 }
 
 /* Add styles here! */
-header {
-  margin-top: 96px;
-  margin-bottom: 64px;
-}
-
 main {
   background-color: rgba(102, 102, 102, 1);
   border-top: 8px solid rgba(153, 153, 153, 1);
-  padding: 66px 0;
+  padding: 64px 0;
 }
 
 h1 {
-  margin-bottom: 48px;
-}
-
-h2 {
+  font-size: 2rem;
+  line-height: 1.2;
   margin: 0;
+  margin-bottom: 3rem;
 }
 
 strong {
@@ -35,33 +29,45 @@ strong {
 
 p {
   font-size: 1.25rem;
+  line-height: 1.5;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+p:last-child {
+  margin-bottom: 0;
 }
 
 .max-width-wrapper {
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 800px;
+  padding: 0px 24px;
+
 }
 
 .intro-chunk {
-  padding: 0 32px;
+  max-width: 415px;
+  margin-top: 96px;
+  margin-bottom: 64px;
 }
 
 .card {
   background-color: white;
   border-bottom: 8px solid rgba(153, 153, 153, 1);
-  padding: 8px 32px;
-}
-
-.intro-chunk > p {
-  max-width: 415px;
+  padding: 24px;
+  margin: 0 -24px;
 }
 
 .indented-heading {
+  width: fit-content;
+  font-size: 1.5rem;
+  line-height: 1.2;
+  margin: 0;
+  margin-left: -32px;
+  margin-top: -16px;
+  margin-bottom: 1rem;
+  padding: 16px 32px;
   background-color: hsl(45deg, 100%, 50%);
   border-bottom: 8px solid rgba(204, 153, 0, 1);
-  max-width: 398px;
-  text-align: center;
-  padding: 16px 0;
-  margin-left: -40px;
 }
